avances con imagenes

--- a/html/index.html
+++ b/html/index.html
@@ -10,12 +10,12 @@
     <link rel="stylesheet" href="../css/index.css">
 </head>
 
-<body class="bg-light">
+<body class="bg-white">
 
     <!-- Header -->
     <header class="text-center py-3">
-        <div class="rounded-circle mx-auto mb-2" style="width: 80px; height: 80px; background-color: #ccc;"></div>
-        
+        <div> <img class="image-logo" src="../images/logo.jpeg" alt=""> </div>
+            
         <br>
 
         <div class="test bg-secondary"></div>
@@ -25,11 +25,11 @@
         <div class="d-flex justify-content-center align-items-center gap-2 overflow-auto px-3">
             <button class="btn btn-outline-secondary btn-sm">←</button>
             <div class="d-flex gap-2">
-                <div class="rounded-circle" style="width: 40px; height: 40px; background-color: #ddd;"></div>
-                <div class="rounded-circle" style="width: 40px; height: 40px; background-color: #ddd;"></div>
-                <div class="rounded-circle" style="width: 40px; height: 40px; background-color: #ddd;"></div>
-                <div class="rounded-circle" style="width: 40px; height: 40px; background-color: #ddd;"></div>
-                <div class="rounded-circle" style="width: 40px; height: 40px; background-color: #ddd;"></div>
+                <div> <img class="carousel-image" src="../images/test.jpeg" alt=""> </div>
+                <div> <img class="carousel-image" src="../images/test.jpeg" alt=""> </div>
+                <div> <img class="carousel-image" src="../images/test.jpeg" alt=""> </div>
+                <div> <img class="carousel-image" src="../images/test.jpeg" alt=""> </div>
+                <div> <img class="carousel-image" src="../images/test.jpeg" alt=""> </div>
             </div>
             <button class="btn btn-outline-secondary btn-sm">→</button>
         </div>
@@ -37,7 +37,7 @@
 
     <!-- Combos -->
     <section class="text-center my-4">
-        <div class="test-combos bg-secondary"> Combos </div>
+        <div class="test-combos img-fluid w-100"> <img src="../images/banner.jpg" alt=""> </div>
     </section>
 
     <!-- Productos -->
@@ -81,8 +81,8 @@
 
     <!-- Footer -->
     <footer class=" bg-footer text-black text-center py-4">
-        <div class="footer-logo mb-3"></div>
-        <h5 class="mb-2">¡Contactame!</h5>
+        <div class="footer-logo mb-3"> <img class="image-logo" src="../images/logo.jpeg" alt=""> </div>
+        <h5 class="mb-3">¡Contactame!</h5>
         <div class="d-flex justify-content-center mb-2">
             <a href="https://www.instagram.com/alaessenconvale?igsh=MTN0ZjN3bDVxcDc2dQ==" class="icono-ig"> <i class="fa-brands fa-instagram"></i> </a>
             <a href="" class="icono-wp"> <i class="fa-brands fa-whatsapp"></i> </a>
